--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,41 @@
     font-family: "bebas";
     src: url("/typography/BebasNeue-Regular.ttf");
 }
+
+@layer components {
+    .header-link-item {
+      @apply cursor-pointer text-xs font-medium opacity-75 transition duration-300 hover:opacity-100;
+    }
+  
+    .carousel-btn-switch-card {
+      @apply absolute z-40 flex h-9 w-9 cursor-pointer items-center justify-center
+        rounded-full border-2 border-zinc-300 bg-zinc-500 text-2xl opacity-75 transition duration-300 hover:opacity-100 md:h-12 md:w-12;
+    }
+  
+    .carousel-btn-switch-card-left {
+      @apply right-1/2 top-1/2 translate-x-[-200px] translate-y-[-50%] transform sm:translate-x-[-250px] md:translate-x-[-300px] lg:translate-x-[-350px];
+    }
+  
+    .carousel-btn-switch-card-right {
+      @apply top-1/2 left-1/2 translate-x-[200px] translate-y-[-50%] transform sm:translate-x-[250px] md:translate-x-[300px] lg:translate-x-[350px];
+    }
+  
+    .carousel-indicator {
+      @apply absolute left-1/2 -top-8 flex h-5 w-24 -translate-x-1/2 transform items-center justify-center space-x-1;
+    }
+  
+    .carousel-indicator-dots {
+      @apply h-2 w-2 rounded-full bg-white opacity-50  transition-all duration-500 hover:w-1 hover:opacity-100;
+    }
+  
+    .carousel-container {
+      @apply relative flex items-center justify-center h-[40rem] w-[40rem];;
+      perspective: 600px;
+      transform-style: preserve-3d;
+    }
+  
+    .carousel-item {
+      @apply absolute h-[50rem] cursor-pointer overflow-hidden rounded-3xl drop-shadow-[0_8px_30px_rgb(0,0,0,0.12)] transition-all duration-700 ease-in-out;
+    }
+  }
+  
