--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,14 @@
 }
 
 html, body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
+.progress {
+    position: fixed;
+    left: 0;
+    right: 0;
+    height: 5px;
+    bottom: 100px;
+  }
