--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,15 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@100&display=swap");
 
 @font-face {
-    font-family: "bebas";
-    src: url("/typography/BebasNeue-Regular.ttf");
+  font-family: "bebas";
+  src: url("/typography/BebasNeue-Regular.ttf");
 }
 
-html, body {
-    width: 100vw;
-    height: 100vh;
+html,
+body {
+  width: 100vw;
+  height: 100vh;
 }
 
+* {
+  @apply duration-200 transition-colors;
+}
